<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layoutDirection="rtl"
    android:textDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/fake_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            android:elevation="8dp"
            android:padding="8dp">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/signup"
                android:textColor="@color/white" />
        </RelativeLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_default_camera_pick" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ed_user_name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:hint="@string/user_name"
            android:inputType="textAutoComplete">

            <EditText
                android:id="@+id/ed_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_for_edit_text"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ed_phone_number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/phone_number_optional"
            android:inputType="phone"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <EditText
                android:id="@+id/ed_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_for_edit_text"
                android:inputType="phone"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ed_promo_code_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="الكود الترويجي"
            android:inputType="textAutoComplete">

            <EditText
                android:id="@+id/ed_promo_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_for_edit_text"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ed_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_for_edit_text"
                android:inputType="textPassword"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/ed_re_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/re_enter_password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimary">

            <EditText
                android:id="@+id/ed_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_bg_for_edit_text"
                android:inputType="textPassword"
                android:padding="8dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/green_btn_bg"
            android:drawableStart="@drawable/ic_pin"
            android:text="تسجيل جديد"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>