<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:layoutDirection="rtl"
    android:textDirection="rtl"
    tools:context=".UI.Activities.AddNewDeliveryOrTaxiService">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/fake_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            android:elevation="8dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="إضافة إعلان"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:padding="8dp"
                android:src="@drawable/ic_back" />

            <ImageView
                android:id="@+id/notification_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_toStartOf="@id/back_btn"
                android:padding="8dp"
                android:src="@drawable/ic_notifications" />

        </RelativeLayout>

        <EditText
            android:id="@+id/ed_service_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_bg_for_edit_text"
            android:hint="@string/service_address"
            android:inputType="textAutoComplete"
            android:padding="8dp" />

        <Spinner
            android:id="@+id/main_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />

        <Spinner
            android:id="@+id/sub_category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp" />


        <EditText
            android:id="@+id/ed_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_bg_for_edit_text"
            android:gravity="start"
            android:hint="@string/ads_description"
            android:inputType="textAutoComplete"
            android:lines="5"
            android:padding="8dp" />


        <EditText
            android:id="@+id/ed_user_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_bg_for_edit_text"
            android:drawableEnd="@drawable/ic_location"
            android:hint="@string/user_address"
            android:inputType="textAutoComplete"
            android:padding="8dp" />

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/images_about_service" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img1"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_default_camera_pick" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img2"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_default_camera_pick" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img3"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_default_camera_pick" />


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img4"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_default_camera_pick" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_publish"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/green_btn_bg"
            android:baselineAligned="false"
            android:drawableStart="@drawable/ic_pin"
            android:text="@string/publish_ads"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>