<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:textDirection="rtl">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/fake_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/toolbar_background"
            android:elevation="8dp"
            android:visibility="visible">

            <TextView
                android:gravity="center_vertical"
                style="@style/Base.TextAppearance.AppCompat.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawablePadding="8dp"
                android:drawableStart="@drawable/ic_unlock"
                android:padding="8dp"
                android:text="@string/click_here_to_login"
                android:textColor="@color/white" />
        </RelativeLayout>

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/user_info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/toolbar_background"
            android:elevation="8dp">

            <TextView
                android:id="@+id/txt_title"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:text="@string/home"
                android:textColor="@color/white" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_profile_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/user_name"
                style="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:maxLines="1"
                android:maxWidth="150dp"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/user_name"
                android:layout_centerHorizontal="true"
                android:layout_margin="8dp"
                android:theme="@style/Yellow_Rating_bar" />

            <LinearLayout
                android:id="@+id/layouts_points"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/my_adds"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_my_ads"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/white_circle_bg"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/points_number"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_my_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="8dp"
                        android:background="@drawable/white_circle_bg"
                        android:gravity="center"
                        android:padding="8dp"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/header_layout"
        android:layout_marginTop="8dp" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />


</RelativeLayout>